# internal/core/dto/category_dto.go
@@ -8,7 +8,6 @@ import (
 
 type CategoryRequest struct {
 	Name        string  `json:"name"`
-	Kind        string  `json:"kind" validate:"required,oneof=income expense"`
 	Description *string `json:"description"`
 	Color       *string `json:"color"`
 }
@@ -16,7 +15,6 @@ type CategoryRequest struct {
 type CategoryResponse struct {
 	ID          uuid.UUID `json:"id"`
 	Name        string    `json:"name"`
-	Kind        string    `json:"kind"`
 	Description *string   `json:"description"`
 	Color       *string   `json:"color"`
 }
@@ -31,7 +29,6 @@ func NewCategoryResponse(id uuid.UUID, name string, description, color *string) 
 }
 
 func (r *CategoryRequest) ToDomain() (*domain.Category, error) {
-	kind := domain.TxnKind(r.Kind)
-	return domain.NewCategory(r.Name, &kind, r.Description, r.Color)
+	return domain.NewCategory(r.Name, r.Description, r.Color)
 
 }
